--- a/style.css
+++ b/style.css
@@ -1,8 +1,31 @@
-html{ font-family: 'Courier Prime', monospace;}  
+html{ font-family: 'Courier Prime', monospace;
+      background-color: gainsboro;
+}  
 
-div{ border: 2px solid red; }
+body{
+      margin-left: 1em;
+      padding: 5em 10em 0 5em;
+      background-color: whitesmoke;
+}
 
-.box{ display: grid;
-      grid-template-columns:(4, fr);
-      grid-template-rows:(2);}
-.box1{grid-column: 1 /span 2;}
+.resumeContainer{
+      margin: auto;
+      width: auto;
+      height: auto;
+      padding: 1em 5em 5em 5em;
+}
+.resume{
+      margin: auto;
+      width: 100%;
+      height: 100%;
+      padding: auto;
+      border: 1px solid darksalmon; 
+}
+
+
+.footer{
+      background-color: gainsboro;
+      height: 150px;
+      width: 100%;
+      padding: 0 10em 5em 5em;
+}
