--- a/style.css
+++ b/style.css
@@ -4,26 +4,63 @@ html{ font-family: 'Courier Prime', monospace;
 
 body{
       margin-left: 1em;
-      padding: 5em 10em 0 5em;
+      height: 100%;
       background-color: whitesmoke;
 }
 
-.resumeContainer{
-      margin: auto;
-      width: auto;
-      height: auto;
-      padding: 1em 5em 5em 5em;
-}
-.resume{
-      width: 100%;
-      border: 1px solid darksalmon; 
+.menu{
+      display: flex;
+      flex-direction: row;
+      border: 1px solid salmon;
+      flex-wrap: nowrap;
+      background-color: antiquewhite;
+      justify-content: space-evenly;
 }
 
-.githubButton{
-      align-content: center;
+.about, .experience, .work, .contact{
+      padding: 1em 4em 1em 4em;
+      background-color: aliceblue;
+      display: flex;
 }
 
-.footer{
-      background-color: gainsboro;
-      height: 150px;      
+.box{  
+      display:grid;
+      border: 1px solid grey;
+      grid-template-columns: (3, 40px);
+      grid-template-rows:3;
+      height: 10em;
 }
+
+.box1{
+      align-items: center;
+      grid-column: 1 / span 3;
+      grid-row: 1;
+      height: 100%;
+}
+.box2{
+      grid-column: 1 / span 1;
+      grid-row: 2;
+}
+.box3{
+      grid-column: 2 / span 1;
+      grid-row: 2;
+}
+.box4{
+      grid-column: 3 / span 1;
+      grid-row: 2;
+}
+.box5{
+      grid-column: 1 / span 1;
+      grid-row: 3;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+}
+.box6{
+      grid-column: 2 / span 1;
+      grid-row: 3;
+}
+.box7{
+      grid-column: 3 / span 1;
+      grid-row: 3;
+      }
