--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body{
 .linkedInButton{
       height: 64px;
       grid-row: 2;
-      grid-column: 2;
+      grid-column: auto;
 }
 
 .introHeader{
@@ -98,4 +98,30 @@ body{
 .introBody{
       font-family: 'Cardo';
       max-width: 75%;
+}
+
+.experienceSummary{
+      padding-top: 5em;
+      font-family: 'Cardo';
+      max-width: 75%;
+}
+
+.header{
+      font-family: 'Montserrat';
+}
+
+.experience6{
+      justify-self: center;
+      padding-top: 4em;
+}
+
+.resumeContainer{
+      padding: .5em 0 .5em 0;
+      width: 100%;
+      height: 20em;
+}
+
+.resume{
+      width: 35em;
+      height: 77em;
 }
