--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
       grid-row: 2;
 }
 
-.index3, .experience3, .work3{
+.index3, .experience3{
       grid-column: 2;
       grid-row: 2;
       justify-self: left;
@@ -47,10 +47,12 @@ body{
       font-family: 'Montserrat';
       font-weight: 700;
 }
-
 .introBody{
       font-family: 'Cardo';
       max-width: 75%;
+}
+.introBodyConclusion{
+      font-family: 'Montserrat';
 }
 
 .index4, .experience4, .work4, .contact4{
@@ -74,10 +76,11 @@ body{
 .gh{
       padding: 1em 0 1em 0;
 }
-.githubButton{
-      height: 64px;
+.githubButton1{
+      height: 72px;
       grid-row: 2;
       grid-column: 1;
+      justify-self: center;
 }
 .li{
       padding: 1em 0 1em 0;
@@ -123,16 +126,20 @@ body{
 /* work */
 /* to be updated */
 
+.githubButton2{
+      height: 64px;
+      grid-row: 1;
+      grid-column: auto;
+      justify-self: center;
+}
+
 /* contact */
 
-.contact3{
+.contact3, .work3{
       display: grid;
       padding-top: 5em;
       justify-self: center;
-      /* border: solid 2px red; */
-
 }
-
 
 .contact6{
       padding-top: 3em;
@@ -142,7 +149,7 @@ body{
       justify-self: left;
       padding: 2em 2em 2em 2em;
 }
-.contactHeader{
+.contactHeader, .workHeader{
       padding-bottom: 1em;
 }
 
