--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html{     
       font-family: 'Cardo', serif;
       font-family: 'Montserrat', sans-serif;
+      scroll-behavior: smooth;
 }  
 
 body{
@@ -13,14 +14,18 @@ body{
 .layoutManager{  
       display: grid;
       grid-template-columns: 15% 70% 15%;
-      grid-template-rows: 3;
+      /* grid-template-rows: 3; */
 }
 .menuManager{
       grid-column: 1 / span 3;
       grid-row: 1;
+      position: fixed;
+      top: 0;
       display: flex;
       height: fit-content;
       justify-self: right;
+      background-color: aquamarine;
+      background-blend-mode: lighten;
 }
 .menu{
       display: flex;
@@ -28,19 +33,21 @@ body{
       flex-wrap: nowrap;
       justify-items: right;
 }
+
+/* menu items */
 .about, .experience, .work, .contact{
       padding: 2em 4em .5em 4em;
 }
 
 /* index */
+.index3{
+      padding-top: 25em;
+}
 .index2, .experience2, .work2, .contact2{
-      grid-column: 1;
-      grid-row: 2;
+      grid-column: 2; 
 }
 
 .index3, .experience3{
-      grid-column: 2;
-      grid-row: 2;
       justify-self: left;
 }
 .introHeader{
@@ -57,19 +64,16 @@ body{
 
 .index4, .experience4, .work4, .contact4{
       grid-column: 3;
-      grid-row: 2;
+      /* grid-row: 2; */
 }
 .index5, .experience5, .work5, .contact5{
       grid-column: 1;
-      grid-row: 3;
+      /* grid-row: 3; */
 }
 
 .index6{
       grid-column: 2;
-      grid-row: 3;
-      display: grid;
       grid-template-columns: 2;
-      grid-template-rows: 2;
       height: fit-content;
       justify-content: space-evenly;
 }
@@ -78,23 +82,24 @@ body{
 }
 .githubButton1{
       height: 72px;
-      grid-row: 2;
+      /* grid-row: 2; */
       grid-column: 1;
       justify-self: center;
 }
 .li{
-      padding: 1em 0 1em 0;
+      padding: 1em 0 0 0;
+      justify-self: center;
 }
 .linkedInButton{
       height: 64px;
-      grid-row: 2;
+      /* grid-row: 2; */
       grid-column: auto;
       justify-self: center;
 }
 
 .index7, .experience7, .work7, .contact7{
       grid-column: 3;
-      grid-row: 3;
+      /* grid-row: 3; */
 }
 
 /* experience */
@@ -111,13 +116,12 @@ body{
 
 .experience6{
       justify-self: center;
-      padding-top: 4em;
 }
-.resumeContainer{
+/* .resumeContainer{
       padding: .5em 0 .5em 0;
       width: 100%;
       height: 20em;
-}
+} */
 .resume{
       width: 35em;
       height: 77em;
@@ -128,28 +132,49 @@ body{
 
 .githubButton2{
       height: 64px;
-      grid-row: 1;
+      /* grid-row: 1; */
       grid-column: auto;
       justify-self: center;
+}
+
+.work6{
+      background-color: white;
+}
+
+/* .frameLayout{
+      border: solid 2px red;
+      display: grid;
+      grid-template-columns: 3;
+      grid-template-rows: 2; 
+} */
+/* .frame{
+      justify-content: center;
+      border: solid 1px burlywood;
+} */
+
+.f3{  /* anchor */
+      grid-column: 3;
+      /* grid-row: 1; */
 }
 
 /* contact */
 
 .contact3, .work3{
       display: grid;
-      padding-top: 5em;
+      padding-top: 2em;
       justify-self: center;
 }
 
-.contact6{
+/* .contact6{
       padding-top: 3em;
       justify-self: left;
-}
-.contactFields{
+} */
+/* .contactFields{
       justify-self: left;
       padding: 2em 2em 2em 2em;
-}
+} */
 .contactHeader, .workHeader{
-      padding-bottom: 1em;
+      padding-top: 1em;
+      justify-self: center;
 }
 
