--- a/style.css
+++ b/style.css
@@ -4,10 +4,22 @@ html{
       scroll-behavior: smooth;
 }  
 
+/* #30343F gunmetal
+#FAFAFF ghost white
+#E4D9FF lavender blue
+#273469 
+#1E2749 */
+
+a{
+      color: #FAFAFF;
+      text-decoration-line: none;
+}
+
 body{
       height: 100%;
-      background-color: whitesmoke;
+      background-color: #30343F;
       display: grid;
+      color: #FAFAFF;
 }
 
 /* global menu */
@@ -23,9 +35,9 @@ body{
       display: flex;
       height: fit-content;
       justify-self: right;
-      background-color: #eeeeee;
+      background-color: #30343F;
       opacity: 90%;
-      
+      vertical-align: middle;
 }
 .menu{
       display: flex;
@@ -37,11 +49,18 @@ body{
 /* menu items */
 .about, .experience, .work, .contact{
       padding: 2em 4em .5em 4em;
+      color: #FAFAFF;
+}
+
+.foto{
+      width: 100%;
+      height: auto;
+      grid-column: 1 / span 3;
 }
 
 /* index */
 .index3{
-      padding-top: 25em;
+      padding-top: 5em;
 }
 .index2, .experience2, .work2, .contact2{
       grid-column: 2; 
