--- a/style.css
+++ b/style.css
@@ -218,13 +218,10 @@ li {
  }  
  #experience li {
     width: 100%;
+    margin-top: 20px;
  }
  #projects li {
     width: 100%;
-    padding-top: 25px;
-    padding-bottom: 25px;
- }
- #projects-list li{
-    padding-top: 15px; 
+    margin-top: 20px;
  }
 }
