--- a/style.css
+++ b/style.css
@@ -78,13 +78,19 @@ body {
    padding: 8px;
    right: 0px;
    top: 0px;
-   background-color: transparent;
+   background-color: #000C1D;
    font-weight: bolder;
    letter-spacing: 1px;
   }
 
   .mobile-container {
     display: block;
+  }
+
+  .grid-container {
+    display: block;
+    padding: 150px 50px 150px 50px;
+    box-sizing: border-box;
   }
  }
 
@@ -98,6 +104,12 @@ body {
 
   .topnav {
     display: none;
+  }
+
+  .grid-container {
+    display: block;
+    padding: 150px 125px 150px 125px;
+    box-sizing: border-box;
   }
 }
 
@@ -145,48 +157,28 @@ body {
 
 /* ======================== MAIN ======================== */
 
-.grid-container {
-  display: block;
-  padding: 150px 125px 150px 125px;
-  box-sizing: border-box;
+#home {
+  padding-bottom: 20px;
 }
 
 #home h2{
   color: #7FDEFF;
 }
 
-.background-text {
+/* .background-text {
   position: relative;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
   z-index: 0;
-}
+} */
 
-#skills p {
-  display: block;
-  position: absolute;
-  /* top: 50%;
-  left: 50%; */
-  transform: translate(-50%, 125%);
-  font-size: 50px;
-  color: #8FE388;
-  animation: slide 5s linear infinite;
-}
-
-@keyframes slide {
-  0% {
-    left: -100%;
-  }
-  100% {
-    left: 100%;
-  }
-}
 
 /* ======================== CONNECTIONS ======================== */
 
 .connections {
   display: inline-block;
+  padding: 0px 0px 20px 0px;
 }
 
 .connections ul {
@@ -195,6 +187,7 @@ body {
   max-width: 100%;
   padding-left: 0;
   justify-content: space-between;
+  padding-top: 20px;
 }
 
 .connections ul li {
@@ -204,4 +197,100 @@ body {
 
 .connections img {
   max-width: 50px;
+}
+
+.emailButton {
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 5px;
+}
+
+/* ======================== skills ======================== */
+
+.skills {
+  padding: 20px;
+  font-size: large;
+  font-weight: 600;
+  font-family: 'Source Code Pro', monospace;
+  background-color: black;
+}
+
+.skills h3 {
+  color: #8FE388;
+}
+
+.skills mark {
+  background-color: #FDFDED;
+}
+
+.typewriter p {
+  overflow: scroll; 
+  border-right: .15em solid #8FE388; 
+  white-space: nowrap;
+  letter-spacing: .15em; 
+  
+}
+
+#skills-t {
+  animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+#skills-m {
+  animation: 
+    typing 4s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+#skills-b {
+  animation: 
+    typing 4.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: #8FE388; }
+}
+
+/* ======================== experience ======================== */
+
+.experience {
+  padding-top: 50px;
+  letter-spacing: 2px;
+  line-height: 30px;
+  padding-bottom: 20px;
+}
+
+.experience h2 {
+  padding-bottom: 10px;
+}
+
+.experience dialog { 
+ background-color: #000C1D; 
+ /* float: left; */
+ position: inherit;
+ width: 90%;
+ color: #FDFDED;
+ border: 1px solid #242424;
+ margin: 10px auto;
+ text-align: justify;
+ white-space: wrap;
+ word-spacing: 5px;
+}
+
+.experience dialog li {
+  list-style: none;
+  padding: 5px;
+}
+
+.experience dialog:hover {
+  background-color: #071a34;
+  border: none;
 }
